--- a/chamados/templates/chamados/enviar.html
+++ b/chamados/templates/chamados/enviar.html
@@ -16,10 +16,10 @@
 <form method="POST" enctype="multipart/form-data">
 {% csrf_token %}
 <div class="form-row">
-  <div class="form-group offset-md-1 col-md-5">
+  <div class="form-group offset-md-1 col-md-3 mb-0">
     {{ form.unidade|as_crispy_field }}
   </div>
-  <div class="form-group col-md-5 mb-0">
+  <div class="form-group col-md-7 mb-0">
     {{ form.categoria|as_crispy_field }}
   </div>
   <div class="form-group offset-md-1 col-md-3 mb-0">
