--- a/static/assets/custom/css/style.css
+++ b/static/assets/custom/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -7,8 +7,8 @@
 }
 
 body {
-    font: 400 14px 'Baloo Thambi 2', sans-serif;
-    font-family: 'Baloo Thambi 2', cursive;
+    font: 400 14px 'Roboto', sans-serif;
+    font-family: 'Roboto', cursive;
     background: #F7F8FC;
     -webkit-font-smoothing: antialiased;
 }
