--- a/chamados/templates/chamados/enviar.html
+++ b/chamados/templates/chamados/enviar.html
@@ -28,6 +28,9 @@
   <div class="form-group col-md-7 mb-0">
     {{ form.nome|as_crispy_field }}
   </div>
+<div class="form-group offset-md-1 col-md-10 mb-0">
+  <input type="email" class="form-control" id="email" name="email" readonly hidden>
+</div>
   <div class="form-group offset-md-1 col-md-10 mb-0">
     {{ form.texto|as_crispy_field }}
   </div>
