fix layout and email

--- a/chamados/templates/chamados/enviar.html
+++ b/chamados/templates/chamados/enviar.html
@@ -6,7 +6,7 @@
 {% block conteudo %}
 <div class="row pl-5">
 <div class="col-md-6 mb-0 mt-2">
-<p class="lead"> Abrir um chamado </p>
+<h3 class="mb-3">Abrir um chamado </h3>
 </div>
 </div>
 <div class="container w-75">
