--- a/chamados/templates/chamados/listar.html
+++ b/chamados/templates/chamados/listar.html
@@ -6,7 +6,7 @@
 {% block conteudo %}
 <div class="row pl-5">
 <div class="col-md-6 mb-0 mt-2">
-<p class="lead"> Tickets Enviados </p>
+<h3>Tickets Enviados </h3>
 </div>
 </div>
 <div class="row p-5">
