--- a/chamados/templates/chamados/enviar.html
+++ b/chamados/templates/chamados/enviar.html
@@ -34,6 +34,9 @@
   <div class="form-group offset-md-1 col-md-10 mb-0">
     {{ form.texto|as_crispy_field }}
   </div>
+  <div class="form-group offset-md-1 col-md-10 mb-0">
+    {{ form.upload_arquivo|as_crispy_field }}
+  </div>
 </div>
 <div class="mr-5">
   <button type="submit" class="btn btn-success float-right">Enviar</button>
