--- a/chamados/templates/chamados/login.html
+++ b/chamados/templates/chamados/login.html
@@ -11,7 +11,7 @@
 {% if not user.is_authenticated %}
 <div class="row pl-5">
 <div class="col-md-6 mb-0 mt-2">
-<p class="lead">Fazer login RH </p>
+<p class="lead">Fazer login </p>
 </div>
 </div>
 <div class=" offset-md-4 col-md-4 mt-5">
