--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -24,6 +24,25 @@
     </script>
 
     <script>
+      $(function () {
+        var path = window.location.pathname.substring(-1);
+        console.log("path : ", path)
+        page = window.location.href.split("/").pop()
+        console.log("caminho:", page)
+        if (page = path) {
+          $('li>a[href="' + path + '"]').addClass('active');
+        }
+      });
+    </script>
+
+    <script>
+      $(document).on('click', 'ul li', function(){
+        $(this).addClass('active')
+      })
+      
+    </script>
+
+    <script>
       $("#id_funcionario").change(function () {
         let re_func = $(this).val();
         let url = "/pegar_funcionario/" + re_func + "/";
