--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -7,8 +7,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse p-1" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+        <ul id="main-nav" class="navbar-nav mr-auto">
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'perfil:perfil' %}">Perfil</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'chamados:enviar' %}">Chamado</a>
           </li>
           <li class="nav-item">
@@ -16,7 +19,7 @@
           </li>
           {% if not user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'chamados:login' %}">Login RH</a>
+            <a class="nav-link" href="{% url 'chamados:login' %}">Login</a>
           </li>
           {% else %}
           <li class="nav-item">
