--- a/perfil/templates/perfil/perfil.html
+++ b/perfil/templates/perfil/perfil.html
@@ -14,22 +14,8 @@
 <div class="container w-75">
     <div class="col-md-12"></div>
     <div class="jumbotron jumbotron-fluid p-5 mb-5 w-100">
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="form-row">
-                <div class="form-group offset-md-1 col-md-3 mb-0">
-                    {{ form.unidade|as_crispy_field }}
-                </div>
-                <div class="form-group col-md-7 mb-0">
-                    {{ form.categoria|as_crispy_field }}
-                </div>
-                <div class="form-group offset-md-1 col-md-3 mb-0">
-                    {{ form.funcionario|as_crispy_field }}
-                </div>
-                <div class="form-group col-md-7 mb-0">
-                    {{ form.nome|as_crispy_field }}
-                </div>
-            </div>
-        </form>
+        {{ form.re_funcionario }}
+    </div>
+    </div>
 
 {% endblock %}
