--- a/perfil/templates/perfil/perfil.html
+++ b/perfil/templates/perfil/perfil.html
@@ -1,21 +1,73 @@
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
+{% load static %}
 
 {% block titulo %} Perfil de usuário {% endblock %}
 
 {% block conteudo %}
 
+
 <div class="row pl-5">
     <div class="col-md-6 mb-0 mt-2">
-        <h3 class="mb-3">Perfil do usuário <code id="user-profile">{{ user|title }}</code></h3>
+        <h3 class="mb-3">Perfil do usuário <code id="user-profile">{{ request.user }}</code></h3>
     </div>
 </div>
 
 <div class="container w-75">
-    <div class="col-md-12"></div>
+    <div class="col-md-10 offset-md-1">
     <div class="jumbotron jumbotron-fluid p-5 mb-5 w-100">
-        {{ form.re_funcionario }}
-    </div>
-    </div>
+    <form method="POST" enctype="multipart/form-data" action="{% url 'perfil:perfil' %}">
+    {% csrf_token %}
+    <div class="form-row">
 
+        <div class="form-group  col-md-3">
+            <label for="nome"><strong>RE : </strong></label>
+            <input type="text" class="form-control" id="re_funcionario" name="re_funcionario" value="{{ funcionario.re_funcionario }}" readonly>
+        </div>
+
+        <div class="form-group  col-md-9">
+            <label for="nome"><strong>Nome do Funcionário : </strong></label>
+            <input type="text" class="form-control" id="nome" name="nome"
+                value="{{ funcionario.nome }}" readonly>
+        </div>
+
+        <div class="form-group  col-md-8">
+            <label for="nome"><strong>Unidade : </strong></label>
+            <input type="text" class="form-control" id="unidade" name="unidade" value="{{ perfil.unidade }}" readonly>
+        </div>
+
+
+        <div class="form-group  col-md-4">
+            <label for="nome"><strong>Centro de Custo : </strong></label>
+            <input type="text" class="form-control" id="centro_de_custo" name="centro_de_custo" value="{{ funcionario.centro_de_custo }}" readonly>
+        </div>
+
+        <div class="form-group  col-md-6">
+            <label for="nome"><strong>Email Corporativo : </strong></label>
+            <input type="text" class="form-control" id="email_corporativo" name="email_corporativo"
+                value="{{ funcionario.email_corporativo }}">
+        </div>
+
+        <div class="form-group  col-md-6">
+            <label for="nome"><strong>Email Pessoal: </strong></label>
+            <input type="text" class="form-control" id="email" name="email" value="{{ funcionario.email }}">
+        </div>
+
+        <div class="form-group  col-md-5">
+            <label for="nome"><strong>Telefone / Ramal : </strong></label>
+            <input type="text" class="form-control" id="ramal" name="ramal" value="{{ funcionario.ramal }}">
+        </div>
+
+
+        <div class="mt-4 mb-1 col-md-3">
+        <button type="reset" class="btn btn-warning mt-1 w-100 ml-1">Limpar</button>
+        </div>
+        <div class="mt-4 mb-1 col-md-4">
+        <button type="submit" class="btn btn-primary float-right  w-100 mt-1">Alterar Informações</button>
+        </div>
+        </form>
+
+        </div> <!-- /form-row-->
+        </div> <!-- /jumbotron-->
+    </div>
+    </div>
 {% endblock %}
