Sistema versão dois com novo layout

--- a/perfil/templates/perfil/perfil.html
+++ b/perfil/templates/perfil/perfil.html
@@ -5,8 +5,9 @@
 
 {% block conteudo %}
 
+<h3> Sessão será disponivél em breve! </h3>
 
-<div class="row pl-5">
+<!-- <div class="row pl-5">
     <div class="col-md-6 mb-0 mt-2">
         <h3 class="mb-3">Perfil do usuário <code id="user-profile">{{ request.user }}</code></h3>
     </div>
@@ -66,8 +67,8 @@
         </div>
         </form>
 
-        </div> <!-- /form-row-->
-        </div> <!-- /jumbotron-->
+        </div> 
+        </div>
     </div>
-    </div>
+    </div> -->
 {% endblock %}
