--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -1,16 +1,22 @@
 {% load static %}
-<footer class="sticky-footer">
-    <div class="container text-center p-3">
-      <p>Em caso de problemas com a ferramenta, entre em contato com Liniker Oliveira ou Pedro Melo / RH - Salto</p>
+
+<div id="footer" class="container-fluid bg-dark p-4">
+    <div class="container text-center">
+        <p class="mb-0 text-white w-100">Em caso de problemas com a ferramenta, entre em contato com Liniker Oliveira ou Pedro Melo / RH - Salto</p>
     </div>
-  </footer>
+</div>
+
+
 
     <script src="{% static 'assets/bootstrap/js/popper.min.js' %}"></script>
     <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script defer src="{% static 'assets/font-awesome/js/all.js' %}"></script>
+    <script src="{% static 'assets/font-awesome/js/all.js' %}"></script>
     <script src="{% static 'assets/custom/js/scripts.js' %}"></script>
     <script src="{% static 'assets/jquery/jquery.js' %}"></script>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
+    <script src="https://getbootstrap.com/docs/4.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+   
     <script>
     var message_ele = document.getElementById("message_container");
 
@@ -20,34 +26,34 @@
     </script>
 
     <script>
-      $('#id_unidade option:selected').text(" ");
+      jQuery('#id_unidade option:selected').text(" ");
     </script>
 
     <script>
-      $(function () {
+      jQuery(function () {
         var path = window.location.pathname.substring(-1);
         console.log("path : ", path)
         page = window.location.href.split("/").pop()
-        console.log("caminho:", page)
+        console.log("caminho : ", page)
         if (page = path) {
-          $('li>a[href="' + path + '"]').addClass('active');
+          jQuery('li>a[href="' + path + '"]').addClass('active');
         }
       });
     </script>
 
     <script>
-      $(document).on('click', 'ul li', function(){
-        $(this).addClass('active')
+      jQuery(document).on('click', 'ul li', function(){
+        jQuery(this).addClass('active')
       })
       
     </script>
 
     <script>
-      $("#id_funcionario").change(function () {
-        let re_func = $(this).val();
+      jQuery("#id_funcionario").change(function () {
+        let re_func = jQuery(this).val();
+        console.log(`RE_FUNCIONARIO : ${re_func}`)
         let url = "/pegar_funcionario/" + re_func + "/";
-        // console.log(url)
-        $.ajax({
+        jQuery.ajax({
           url: url,
           type: 'GET',
           data: {
@@ -57,8 +63,8 @@
             // body...
           },
           success: function (response) {
-            $("#id_nome").val(response.nome);
-            $("#email").val(response.email)
+            jQuery("#id_nome").val(response.nome);
+            jQuery("#email").val(response.email)
             // console.log(response.nome);
             // console.log(response.email);
           },
