--- a/chamados/templates/chamados/listar.html
+++ b/chamados/templates/chamados/listar.html
@@ -4,31 +4,28 @@
 {% block titulo %} Listagem de Tickets {% endblock %}
 
 {% block conteudo %}
-<div class="row pl-5">
-<div class="col-md-6 mb-0 mt-2">
-<h3>Tickets Enviados </h3>
-</div>
-</div>
-<div class="row p-5">
-<div class="col-md-12">
-<div class="offset-md-1 col-md-10">
 <div class="row">
-<div class="col-md-4 mb-2   ">
+  <div class="col-12">
+      <h3 class="">Tickets Enviados</h3>
+      <hr>
+<div class="row">
+<div class="col-md-4 mb-2">
 <input type="text" class="form-control" id="pesquisar" name="pesquisar" value="" placeholder="Digite a categoria ou Nome">
 </div>
-<div class="col-md-6 mb-2">
+<div class="col-md-2 mb-2">
 <button type="button" class="btn btn-primary">Pesquisar</button>
 </div>
-
 </div>
-<table class="table table-striped">
+
+<div class="row p-2">
+<table class="table table-striped table-responsive border rounded bg-light shadow">
   <thead class="thead-dark">
     <tr>
-      <th scope="col" style="width: 10%; text-align : center;">Data</th>
+      <th scope="col" style="width: 15%; text-align : center;">Data</th>
       <th scope="col" style="width: 7%; text-align : center;">RE</th>
       <th scope="col" style="width: 18%; text-align : left;">Nome</th>
-      <th scope="col" style="width: 12%; text-align : left;">Categoria</th>
-      <th scope="col" style="width: 17%; text-align : center;">Dias</th>
+      <th scope="col" style="width: 15%; text-align : left;">Categoria</th>
+      <th scope="col" style="width: 2%; text-align : center;">Dias</th>
       <th scope="col" style="width: 5%; text-align : left;">Finalizado</th>
     </tr>
   </thead>
@@ -56,7 +53,11 @@
 <tfoot>
 {% include 'parciais/_pagination.html'%}
     </tfoot>
-</div> <!-- ./after table -->
+    
 </div>
+
+
 </div>
+</div> 
+
 {% endblock %}
