--- a/templates/parciais/_head.html
+++ b/templates/parciais/_head.html
@@ -2,7 +2,12 @@
 
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'assets\bootstrap\css\bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets\bootstrap\js\bootstrap.min.js' %}">
-    <link rel="stylesheet" href="{% static 'assets/custom/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'assets\custom\css\style.css' %}">
+
+    <!--[if lte IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
