--- a/chamados/templates/chamados/enviar.html
+++ b/chamados/templates/chamados/enviar.html
@@ -8,7 +8,7 @@
   <div class="col-12">
       <h3 class="">Abrir um chamado</h3>
       <hr>
-<form method="POST" enctype="multipart/form-data">
+<form method="POST" enctype="multipart/form-data" content='text/html; charset=UTF-8' accept-charset="UTF-8">
 {% csrf_token %}
 <div class="form-row">
   <div class="form-group offset-md-1 col-md-3 mb-0">
