--- a/templates/parciais/_head.html
+++ b/templates/parciais/_head.html
@@ -6,6 +6,6 @@
 
     <link rel="stylesheet" href="{% static 'assets\custom\css\style.css' %}">
     <!--[if lte IE 11]>
-        <script src="{% static 'templates/static/assets/html/html5shiv.js' %}"></script>
-        <script src="{% static 'templates/static/assets/html/respond.min.js' %}"></script>
+        <script src="{% static 'assets/html/html5shiv.js' %}"></script>
+        <script src="{% static 'assets/html/respond.min.js' %}"></script>
     <![endif]-->
