--- a/templates/parciais/_head.html
+++ b/templates/parciais/_head.html
@@ -8,4 +8,6 @@
     <!--[if lte IE 11]>
         <script src="{% static 'assets/html/html5shiv.js' %}"></script>
         <script src="{% static 'assets/html/respond.min.js' %}"></script>
+        <script src="{% static 'assets\html\html5shiv.js' %}"></script>
+        <script src="{% static 'assets\html\respond.min.js' %}"></script>
     <![endif]-->
