--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -12,7 +12,7 @@
     <script src="{% static 'assets\jquery\popper.min.js' %}"></script>
     <script src="{% static 'assets\bootstrap\bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'assets\jquery\jquery-3.2.1.min.js' %}"></script>
-    <script>window.jQuery || document.write('<script src="assets\\jquery\\jquery.slim.min.js"><\\/script>')</script>
+    <script>window.jQuery || document.write('<script src="{% static "assets/jquery/jquery.slim.min.js" %}"><\/script>')</script>
     <script src="{% static 'assets\bootstrap\bootstrap.bundle.min.js' %}"></script>
    
     <script>
