--- a/templates/parciais/_head.html
+++ b/templates/parciais/_head.html
@@ -1,13 +1,12 @@
 {% load static %}
 
   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=10">
     <link rel="stylesheet" href="{% static 'assets\bootstrap\bootstrap.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'assets\custom\css\style.css' %}">
-    <!--[if lte IE 11]>
+    <!--[if lt IE 9]>
         <script src="{% static 'assets/html/html5shiv.js' %}"></script>
         <script src="{% static 'assets/html/respond.min.js' %}"></script>
-        <script src="{% static 'assets\html\html5shiv.js' %}"></script>
-        <script src="{% static 'assets\html\respond.min.js' %}"></script>
     <![endif]-->
