--- a/templates/parciais/_head.html
+++ b/templates/parciais/_head.html
@@ -2,7 +2,7 @@
 
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=10">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="{% static 'assets\bootstrap\bootstrap.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'assets\custom\css\style.css' %}">
