--- a/templates/static/assets/custom/css/style.css
+++ b/templates/static/assets/custom/css/style.css
@@ -46,4 +46,20 @@ td {
     display: none;
 }
 
+/* Animações */
+
+main {
+    animation-name: fade;
+    animation-duration: 3s;
+}
+
+@keyframes fade { 
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 
