--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     {% include 'parciais/_head.html' %}
     <title>Ticket | {% block titulo %}{% endblock %}</title>
-    <!-- <base href="http://centralrh.conti.de/"> -->
+    <base href="http://centralrh.conti.de/">
 </head>
 <body>
 {% include 'parciais/_nav.html' %}
