--- a/chamados/templates/chamados/atualizar.html
+++ b/chamados/templates/chamados/atualizar.html
@@ -16,29 +16,36 @@
     <label for="unidade">Unidade : </label>
     <input type="text" class="form-control" id="unidade" name="unidade" value="{{ ticket.funcionario.unidade }}" readonly>
   </div>
-   <div class="form-group col-md-2">
+   <div class="form-group col-md-3">
     <label for="re">RE : </label>
     <input type="number" class="form-control" id="funcionario" name="funcionario" maxlength="5" minlength="4"
       value="{{ ticket.funcionario.re_funcionario }}" readonly>
   </div>
-      <div class="form-group col-md-4">
+      <div class="form-group col-md-6">
     <label for="re">Nome do Funcionário : </label>
     <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite um RE válido."
       value="{{ ticket.funcionario.nome }}" readonly>
   </div>
-    <div class="form-group col-md-3">
-    <label for="categoria">Categoria :</label>
-    <input type="text" class="form-control" name="categoria" id=categoria value="{{ ticket.categoria }}" readonly>
-    </select>
-  </div>
    <div class="form-group col-md-4">
-    <label for="ramal">Ramal : </label>
+    <label for="ramal">Ramal / Telefone: </label>
     <input type="number" class="form-control" id="ramal" name="ramal" value="{{ ticket.funcionario.ramal }}" readonly>
   </div>
     <div class="form-group col-md-8">
     <label for="email">Email Funcionário : </label>
     <input type="email" class="form-control" id="email" name="email" value="{{ ticket.funcionario.email }}" readonly>
   </div>
+      <div class="form-group col-md-6">
+        <label> Categoria </label>
+        <select name="categoria" class="select form-control form-control" id="categoria" readonly>
+          <option value="{{ ticket.categoria.id }}">{{ ticket.categoria }}</option>
+        </select>
+      </div>
+      <div class="form-group col-md-6">
+        <label> Subcategoria </label>
+        <select name="subcategoria" class="select form-control form-control" id="subcategoria" readonly>
+          <option value="{{ ticket.subcategoria.id }}">{{ ticket.subcategoria }}</option>
+        </select>
+      </div>
     <div class="form-group col-md-12">
     <label for="texto">Descrição do Chamado : </label>
     <textarea class="form-control" id="texto-atualizar" name="texto" rows="5" col="15"
@@ -78,6 +85,7 @@
     readonly>{{ ticket.resposta }}</textarea>
 </div>
 
+</form>
 <div class="form-group  col-md-12 mt-4 p-2">
 <a type="button" href="{% url 'chamados:listar' %}" class="btn btn-warning pr-5 pl-5 w-100">&nbsp;&nbsp;&nbsp; Voltar &nbsp;&nbsp;&nbsp;</a>
 </div>
