--- a/chamados/templates/chamados/enviar.html
+++ b/chamados/templates/chamados/enviar.html
@@ -8,14 +8,20 @@
   <div class="col-12">
       <h3 class="">Abrir um chamado</h3>
       <hr>
-<form method="POST" enctype="multipart/form-data" content='text/html; charset=UTF-8' accept-charset="UTF-8">
+<form method="POST" enctype="multipart/form-data"  content='text/html; charset=UTF-8' accept-charset="UTF-8">
 {% csrf_token %}
 <div class="form-row">
   <div class="form-group offset-md-1 col-md-3 mb-0">
     {{ form.unidade|as_crispy_field }}
   </div>
-  <div class="form-group col-md-7 mb-0">
+  <div class="form-group col-md-3 mb-0">
     {{ form.categoria|as_crispy_field }}
+  </div>
+  <div class="form-group col-md-4 mb-0">
+  <label> Subcategoria </label>
+  <select name="subcategoria" class="select form-control form-control" id="subcategoria">
+    <option value="">---------</option>
+</select>
   </div>
   <div class="form-group offset-md-1 col-md-3 mb-0">
     {{ form.funcionario|as_crispy_field }}
