--- a/chamados/templates/chamados/listar.html
+++ b/chamados/templates/chamados/listar.html
@@ -22,9 +22,10 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col" style="width: 12%; text-align : center;">Data</th>
-      <th scope="col" style="width: 5%; text-align : center;">RE</th>
-      <th scope="col" style="width: 20%; text-align : left;">Nome</th>
+      <th scope="col" style="width: 6%; text-align : center;">RE</th>
+      <th scope="col" style="width: 18%; text-align : left;">Nome</th>
       <th scope="col" style="width: 12%; text-align : left;">Categoria</th>
+      <th scope="col" style="width: 15%; text-align : left;">Subcategoria</th>
       <th scope="col" style="width: 2%; text-align : center;">Dias</th>
       <th scope="col" style="width: 5%; text-align : left;">Finalizado</th>
     </tr>
@@ -36,6 +37,7 @@
       <td scope="row" style="text-align : center;">{{ ticket.funcionario.re_funcionario }}</th>
       <td style="text-align : left;"><h6><a href="{% url 'chamados:atualizar_chamado' ticket.id %}"> {{ ticket.funcionario.nome }}</a></h6></td>
       <td style="text-align : left;">{{ ticket.categoria }}</td>
+      <td style="text-align : left;">{{ ticket.subcategoria }}</td>
       {% if ticket.finalizado is False %}
       <td id="ticket-aberto">{{ ticket.tempo_aberto }} </td>
       {% else %}
