--- a/perfil/templates/perfil/logout.html
+++ b/perfil/templates/perfil/logout.html
@@ -14,7 +14,7 @@
 <div>
 <small class="text-muted">
 <hr/>
-<a href="{% url 'chamados:login' %}"> Fazer Login novamente </a>
+<a href="{% url 'perfil:login' %}"> Fazer Login novamente </a>
 </small>
 </div>
 
