--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -23,11 +23,11 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'chamados:meu_logout' %}">Sair</a>
+            <a class="nav-link" href="{% url 'perfil:meu_logout' %}">Sair</a>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'chamados:login' %}">Login</a>
+            <a class="nav-link" href="{% url 'perfil:login' %}">Login</a>
           </li>
           {% endif %}
         </ul>
