Ajustando IE subcategoria

--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -77,6 +77,7 @@
 
      <script>
     jQuery("#id_categoria").change(function () {
+      console.log("Estou aqui")
       let categoria = jQuery(this).val()
       let url = "carregar_subcategorias/" + categoria + "/";
 
@@ -89,7 +90,7 @@
         success: function (response) {
           jQuery('#subcategoria').empty();
           let object = JSON.parse(response.data)
-          object.forEach( (data) => {
+          object.forEach( function (data)  {
             console.log()
               $('<option/>', {
                 'value': data.pk,
