--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -17,14 +17,11 @@
 <div class="row">
 <div class="col-md-12">
   <button type="reset"  class="btn btn-warning float-right ml-2 w-25" value="Reset">Limpar</button>
-  <button type="submit" class="btn btn-success float-right w-50">Entrar</button>
+  <button type="submit" class="btn btn-success float-right w-25">Entrar</button>
+  <button type="button" class="btn btn-info">Esqueci minha senha</button>
  </div>
  </div>
-<div class="row mt-2">
-<div class="col-md-12">
-<p class="h6"><a href="#">Esqueci minha senha </a> </p>
-</div>
-</div>
+
 </form>
 </div>
 </div> <!-- ./row -->
