--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -1,17 +1,13 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-  
-  <a class="navbar-brand" href="#">
-      <img id="logo" src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="50">
-    </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto"  style="font-size: 17px;">
        <li class="nav-item">
           <a class="nav-link" href="{% url 'perfil:perfil' %}">Perfil</a>
           </li>
@@ -31,8 +27,12 @@
           </li>
           {% endif %}
         </ul>
+        <a class="navbar-brand" href="#">
+          <img id="logo" src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="50">
+          <img id="logo" src="{% static 'img/logo2.png' %}" alt="Vitesco" width="100" height="50">
+        </a>
         {% if  user.is_authenticated %}
-        <ul class="nav navbar-nav ml-auto">
+        <ul class="nav navbar-nav ml-auto" style="font-size: 17px;">
          <li> 
           <p class="text-light" id="username-title">Usuário : &nbsp;&nbsp;&nbsp;<span id="username-data">{{ request.user.username }}</span> </p>
         </li> 
@@ -40,7 +40,8 @@
         {% else %}
         <ul class="nav navbar-nav ml-auto">
           <li>
-            <p id="username-title"></p>
+            <p id="username-title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </li>
         {% endif %}
     </ul>
