--- a/chamados/templates/chamados/enviar.html
+++ b/chamados/templates/chamados/enviar.html
@@ -11,26 +11,25 @@
 <form method="POST" enctype="multipart/form-data"  content='text/html; charset=UTF-8' accept-charset="UTF-8">
 {% csrf_token %}
 <div class="form-row">
-  <div class="form-group offset-md-1 col-md-3 mb-0">
-    {{ form.unidade|as_crispy_field }}
-  </div>
-  <div class="form-group col-md-3 mb-0">
+  <div class="form-group col-md-5 offset-md-1 mb-0">
     {{ form.categoria|as_crispy_field }}
   </div>
-  <div class="form-group col-md-4 mb-0">
-  <label> Subcategoria </label>
-  <select name="subcategoria" class="select form-control form-control" id="subcategoria">
-    <option value="">---------</option>
-</select>
-  </div>
-  <div class="form-group offset-md-1 col-md-3 mb-0">
-    {{ form.funcionario|as_crispy_field }}
-  </div>
-  <div class="form-group col-md-7 mb-0">
-    {{ form.nome|as_crispy_field }}
+  <div class="form-group col-md-5 mb-0">
+    <label> Subcategoria </label>
+    <select name="subcategoria" class="select form-control form-control" id="subcategoria">
+      <option value="">---------</option>
+    </select>
   </div>
 <div class="form-group offset-md-1 col-md-10 mb-0">
   <input type="email" class="form-control" id="email" name="email" readonly hidden>
+</div>
+<div class="form-group offset-md-1 col-md-10 mb-0">
+  <select id="id_unidade" name="unidade" class="select form-control form-control" hidden>
+    <option value="" selected>----------</option>
+    {% for unidades in unidades %}
+    <option value="{{ unidades.nome }}">{{ unidades }}</option>
+    {% endfor %}
+  </select>
 </div>
   <div class="form-group offset-md-1 col-md-10 mb-0">
     {{ form.texto|as_crispy_field }}
