--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -75,10 +75,25 @@
         });
       </script>
 
+
+
   <script>
+    function indexMatchingText(ele, text) {
+        for (var i = 0; i < ele.length; i++) {
+          if (ele[i].childNodes[0].nodeValue === text) {
+            return i;
+          }
+        }
+        return undefined;
+      }
+
+
     jQuery("#id_categoria").change(function () {
-      let categoria = jQuery(this).val()
+      let categoria = jQuery(this).children("option:selected").val();
+      var select = document.getElementById('id_categoria').getElementsByTagName("option");
+      categoria = indexMatchingText(select, categoria)
       let url = "carregar_subcategorias/" + categoria + "/";
+      console.log(categoria)
 
       jQuery.ajax({                      
         url: url,                    
@@ -101,4 +116,31 @@
       });
 
     });
+  </script>
+
+  <script>
+     jQuery("#unidade").change(function () {
+        let unidade = jQuery(this).val();
+        let url = "/carregar_unidade/" + unidade + "/";
+        jQuery.ajax({
+          url: url,
+          type: 'GET',
+          data: {
+            unidade: unidade
+          },
+          beforeSend: function (xhr) {
+            // body...
+          },
+          success: function (data) {
+          concatenar = jQuery("#concatenar").val(unidade) 
+          },
+          error: function (xhr) {
+            // body... xhr.statusText + xhr.responseText
+          },
+          complete: function () {
+            // body...
+          }
+        })
+      });
+
   </script>
