subindo perfil para o master

--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -24,7 +24,10 @@
       {% endfor %}
     </select>
   </div>
-  <input type="text" id="concatenar" name="concatenar">
+  <div class="col-md-12">
+  <label for="funcionario">Digite seu RE : </label>
+    <input type="text" id="funcionario-login" name="funcionario" class="form-control">
+  </div>
   <div class="col-md-12">
   {{form|bootstrap}}
   </div>
