--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -76,7 +76,6 @@
       </script>
 
 
-
   <script>
     function indexMatchingText(ele, text) {
         for (var i = 0; i < ele.length; i++) {
@@ -86,7 +85,6 @@
         }
         return undefined;
       }
-
 
     jQuery("#id_categoria").change(function () {
       let categoria = jQuery(this).children("option:selected").val();
@@ -118,22 +116,28 @@
     });
   </script>
 
+
   <script>
-     jQuery("#unidade").change(function () {
-        let unidade = jQuery(this).val();
-        let url = "/carregar_unidade/" + unidade + "/";
+  jQuery("#funcionario-login").change(function () {
+        let funcionario_login = jQuery(this).val();
+        let unidade = jQuery("#unidade").val();
+        let url = "/funcionario_login/" + funcionario_login + "/";
         jQuery.ajax({
           url: url,
           type: 'GET',
           data: {
-            unidade: unidade
+            funcionario_login: funcionario_login,
+            unidade: unidade,
           },
+
           beforeSend: function (xhr) {
-            // body...
           },
+
           success: function (data) {
-          concatenar = jQuery("#concatenar").val(unidade) 
+          console.log(unidade)
+          concatenar = jQuery("#id_username").val(unidade + funcionario_login)
           },
+  
           error: function (xhr) {
             // body... xhr.statusText + xhr.responseText
           },
@@ -142,5 +146,5 @@
           }
         })
       });
-
   </script>
+
