ajustes front-end [perfil e login]

--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -25,7 +25,7 @@
     </select>
   </div>
   <div class="col-md-12">
-  <label for="funcionario">Digite seu RE : </label>
+  <label for="funcionario">Digite seu Registro : </label>
     <input type="text" id="funcionario-login" name="funcionario" class="form-control">
   </div>
   <div class="col-md-12">
