--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -16,7 +16,7 @@
 {% csrf_token %}
 <div class="row">
   <div class="col-md-12">
-    <label for="unidade">Selecione sua Unidade</label>
+    <label for="unidade">Selecione sua Unidade :</label>
     <select id="unidade" name="unidade" class="select form-control form-control">
       <option value="" selected>----------</option>
       {% for unidade in unidade %}
